HelloUltraviolet/Fixtures/RejectedSource/Procedures/PostconditionsDiagnostic/Expected.uv
//! Expected diagnostic metadata for the PostconditionsDiagnostic rejected-source specimen.

expectedDiagnostic("E-SEM-2806", "diag.15.Postconditions")
